--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
 <body>
   <main>
     <div class="pos-r is-pc-tb">
-      <div id="fv_img_wrap">
-        <img class="alignnone size-large wp-image-4535 aligncenter lazy-loaded" src="images/fv.png"
-          data-lazy-type="image" data-src="images/fv.png" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" width="100%" height="1024"
-          srcset="" data-srcset="" sizes="(max-width: 900px) 100vw, 683px">
-      </div>
+      <picture>
+        <img src="images/fv.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" class="w-100p">
+      </picture>
     </div>
     <div class="pos-r is-sp">
-      <div id="fv_img_wrap">
-        <img class="alignnone size-large wp-image-4535 aligncenter lazy-loaded" src="images/fv02.png"
-          data-lazy-type="image" data-src="images/fv.png" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" width="100%" height="1024"
-          srcset="" data-srcset="" sizes="(max-width: 900px) 100vw, 683px">
-      </div>
+      <picture>
+        <img src="images/fv02.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" class="w-100p">
+      </picture>
     </div>
 
     <div class="pos-r is-pc-tb">
