--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </picture>
     </div>
     <div class="bg">
-      <div class="device3 animate72"><a href="#" target="_blank">
+      <div class="device3 animate72"><a href="#form" target="_blank">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
@@ -120,7 +120,7 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
-        <div class="device3 animate72"><a href="#" target="_blank">
+        <div class="device3 animate72"><a href="#form" target="_blank">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
       </div>
@@ -187,7 +187,7 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
-        <div class="device3 animate72"><a href="#" target="_blank">
+        <div class="device3 animate72"><a href="#form" target="_blank">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
         <p class="btn_font">物販副業を起点に<span class="font_color">「働かなくてもお金を生み出す不労所得」</span>を<br>
@@ -210,12 +210,12 @@
       </picture>
     </div>
     <div class="bg03">
-      <div class="device3 animate72"><a href="#" target="_blank">
+      <div class="device3 animate72"><a href="#form" target="_blank">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
 
-    <div class="pos-r is-pc-tb">
+    <div class="pos-r is-pc-tb" id=“form”>
       <picture>
         <img src="images/bg_10.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
@@ -226,6 +226,11 @@
         <img src="images/bg_10_sp.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
       </picture>
+    </div>
+    <div class="form_bg">
+      <div class="regist_form"></div>
+      <script src="https://m.movienext-online.com/js/jquery-1.7.1.min.js"></script>
+      <script src="https://m.movienext-online.com/jss/dynamic_form/8mHwfj65/a.js"></script>
     </div>
   </main>
   <footer id="footer" class="footer footer-container nwa">
