--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <main>
     <div class="pos-r is-pc-tb">
       <picture>
-        <img src="images/fv.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" class="w-100p">
+        <img src="images/fv.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開"
+          class="w-100p">
       </picture>
     </div>
     <div class="pos-r is-sp">
       <picture>
-        <img src="images/fv02.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開" class="w-100p">
+        <img src="images/fv02.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開"
+          class="w-100p">
       </picture>
     </div>
 
@@ -36,7 +38,7 @@
       </picture>
     </div>
     <div class="bg">
-      <div class="device3 animate72"><a href="#form" target="_blank">
+      <div class="device3 animate72"><a href="#form">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
@@ -120,7 +122,7 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
-        <div class="device3 animate72"><a href="#form" target="_blank">
+        <div class="device3 animate72"><a href="#form">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
       </div>
@@ -187,7 +189,7 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
-        <div class="device3 animate72"><a href="#form" target="_blank">
+        <div class="device3 animate72"><a href="#form">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
         <p class="btn_font">物販副業を起点に<span class="font_color">「働かなくてもお金を生み出す不労所得」</span>を<br>
@@ -210,7 +212,7 @@
       </picture>
     </div>
     <div class="bg03">
-      <div class="device3 animate72"><a href="#form" target="_blank">
+      <div class="device3 animate72"><a href="#form">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
