--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
       </div>
     </div>
 
-    <div class="pos-r is-pc-tb" id=“form”>
+    <div class="pos-r is-pc-tb" id=form>
       <picture>
         <img src="images/bg_10.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
       </picture>
     </div>
-    <div class="pos-r is-sp">
+    <div class="pos-r is-sp" id=form>
       <picture>
         <img src="images/bg_10_sp.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
