--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="wrap">
     <div class="pos-r is-pc-tb">
       <picture>
         <img src="images/fv.png" loading="eager" fetchpriority="low" decoding="async" alt="働かなくてもお金が入ってくる仕組みの作り方を大公開"
@@ -38,6 +38,9 @@
       </picture>
     </div>
     <div class="bg">
+      <div class="button_solid007">
+        <p>  無料開催は期間限定です  </p>
+      </div>
       <div class="device3 animate72"><a href="#form">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
@@ -122,6 +125,9 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
+        <div class="button_solid007">
+          <p> 無料開催は期間限定です </p>
+        </div>
         <div class="device3 animate72"><a href="#form">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
@@ -189,6 +195,9 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
+        <div class="button_solid007">
+          <p> 無料開催は期間限定です </p>
+        </div>
         <div class="device3 animate72"><a href="#form">
             <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
@@ -212,6 +221,9 @@
       </picture>
     </div>
     <div class="bg03">
+      <div class="button_solid007">
+        <p> 無料開催は期間限定です </p>
+      </div>
       <div class="device3 animate72"><a href="#form">
           <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
