--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           alt="物販副業を起点に「働かなくてもお金を生み出す不労所得」を作り出す具体的な手法をセミナーでお伝えします" class="w-100p">
       </picture>
     </div>
-    <div class="bg">
+    <br><div class="bg">
+      <div class="device3 animate72"><a href="#form">
+        <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+      </div>
       <div class="button_solid007">
         <p>  無料開催は期間限定です  </p>
-      </div>
-      <div class="device3 animate72"><a href="#form">
-          <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
 
@@ -125,11 +125,11 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
+        <div class="device3 animate72"><a href="#form">
+          <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+        </div>
         <div class="button_solid007">
           <p> 無料開催は期間限定です </p>
-        </div>
-        <div class="device3 animate72"><a href="#form">
-            <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
       </div>
     </div>
@@ -195,11 +195,11 @@
     </div>
     <div class="bg_white">
       <div class="bg02">
+        <div class="device3 animate72"><a href="#form">
+          <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+        </div>
         <div class="button_solid007">
           <p> 無料開催は期間限定です </p>
-        </div>
-        <div class="device3 animate72"><a href="#form">
-            <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
         <p class="btn_font">物販副業を起点に<span class="font_color">「働かなくてもお金を生み出す不労所得」</span>を<br>
           作り出す具体的な手法をセミナーでお伝えします</p>
@@ -221,11 +221,11 @@
       </picture>
     </div>
     <div class="bg03">
+      <div class="device3 animate72"><a href="#form">
+        <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+      </div>
       <div class="button_solid007">
         <p> 無料開催は期間限定です </p>
-      </div>
-      <div class="device3 animate72"><a href="#form">
-          <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
     </div>
 
