--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
           alt="物販副業を起点に「働かなくてもお金を生み出す不労所得」を作り出す具体的な手法をセミナーでお伝えします" class="w-100p">
       </picture>
     </div>
-    <br><div class="bg">
+    <br>
+    <div class="bg">
       <div class="device3 animate72"><a href="#form">
-        <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+          <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
       <div class="button_solid007">
-        <p>  無料開催は期間限定です  </p>
+        <p> 無料開催は期間限定です </p>
       </div>
     </div>
 
@@ -126,7 +127,7 @@
     <div class="bg_white">
       <div class="bg02">
         <div class="device3 animate72"><a href="#form">
-          <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+            <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
         <div class="button_solid007">
           <p> 無料開催は期間限定です </p>
@@ -196,7 +197,7 @@
     <div class="bg_white">
       <div class="bg02">
         <div class="device3 animate72"><a href="#form">
-          <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+            <img style="width:80%!important;" src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
         </div>
         <div class="button_solid007">
           <p> 無料開催は期間限定です </p>
@@ -222,14 +223,14 @@
     </div>
     <div class="bg03">
       <div class="device3 animate72"><a href="#form">
-        <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
+          <img src="images/btn.png" alt="今すぐ無料セミナーに申し込む"></a>
       </div>
       <div class="button_solid007">
         <p> 無料開催は期間限定です </p>
       </div>
     </div>
 
-    <div class="pos-r is-pc-tb" id=form>
+    <div class="pos-r is-pc-tb" id="form">
       <picture>
         <img src="images/bg_10.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
@@ -249,7 +250,7 @@
 
 
 
-      
+
       <div class="regist_form"></div>
       <script src="https://m.movienext-online.com/js/jquery-1.7.1.min.js"></script>
       <script src="https://m.movienext-online.com/jss/dynamic_form/8mHwfj65/a.js"></script>
