--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           class="w-100p">
       </picture>
     </div>
-    <div class="pos-r is-sp" id=form>
+    <div class="pos-r is-sp" id="form">
       <picture>
         <img src="images/bg_10_sp.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
