--- a/index.html
+++ b/index.html
@@ -230,19 +230,19 @@
       </div>
     </div>
 
-    <div class="pos-r is-pc-tb" id="form">
+    <div class="pos-r is-pc-tb">
       <picture>
         <img src="images/bg_10.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
       </picture>
     </div>
-    <div class="pos-r is-sp" id="form">
+    <div class="pos-r is-sp">
       <picture>
         <img src="images/bg_10_sp.png" loading="eager" fetchpriority="low" decoding="async" alt="webセミナーの日程とお申し込みはこちら"
           class="w-100p">
       </picture>
     </div>
-    <div class="form_bg">
+    <div class="form_bg" id="form">
 
 
 
