--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
             <div id="navi-footer-in" class="navi-footer-in">
               <ul id="menu-menu01" class="menu-footer">
                 <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a
-                    href="#">会社概要</a></li>
+                    href="https://movienext-online.com/secondpage/tokuteisyoutorihikihou-2/">特定商取引法</a></li>
                 <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37">　|　
                 </li>
                 <li id="menu-item-42" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42"><a
-                    href="#">プライバシーポリシー</a></li>
+                    href="https://movienext-online.com/secondpage/privacy-policy/">プライバシーポリシー</a></li>
               </ul>
             </div>
           </nav>
